--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@
 <body> 
   <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky top-0">
     <a class="navbar-brand other" href="../">
-      <img src="../pictures/favicon.jpeg" width="80" height="80" class="d-inline-block" alt="">
+      <img src="/pictures/favicon.jpeg" width="80" height="80" class="d-inline-block" alt="">
       Poisons</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="True" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link mb-1 other" href="../">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link mb-1 other" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link mb-1 other" href="../">Go back</a>
+            <a class="nav-link mb-1 other" href="/">Go back</a>
         </li>
       </ul>
     </div>
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="col">
         <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Poison" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Poison_img</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Poison" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Poison_img</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">{{title}}</text></svg>
           <div class="card-body">
               <p class="card-text">{{content}}</p>
               <div class="d-flex justify-content-between align-items-center">
